[metadata]
name = drax_ecdh_py
version = 1.0.0
author = Applica S.R.L.
author_email = marconicoletti23@gmail.com
description = Python Wrapper for ECDH C-library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/applica-of-things/drax_ecdh_py
project_urls =
    Bug Tracker = https://github.com/applica-of-things/drax_ecdh_py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
exclude = drax_ecdh_py*tests.py

[options.package_data]
* =
  *.so